...
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_search_black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textEditSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_for_a_movie" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_search"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Search"
                    />
...
